--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
 		<link rel="stylesheet" href="reveal.js-3.3.0/css/reveal.css">
 		<link rel="stylesheet" href="reveal.js-3.3.0/css/theme/black.css">
-
-		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="reveal.js-3.3.0/lib/css/zenburn.css">
+		<link rel="stylesheet" href="styles.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -24,7 +23,16 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<h1>Docker in 7 minutes</h1>
+					<h4>Key concepts and getting started</h4>
+					<img id="docker_logo" alt="the Docker logo" src="https://www.docker.com/sites/default/files/moby.svg"/>
+					<p>
+						<small>21 October 2016  |  Def Method company meeting  | Lightning talk by <a href="http://www.paigebolduc.com">Paige Bolduc</a></small>
+					</p>
+				</section>
+
+
 				<section>Slide 2</section>
 			</div>
 		</div>
