Add note for slide navigation clarity on terminology page.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 						<p class="fragment highlight-blue">Docker Client</p>
 						<p class="fragment highlight-blue">Container</p>
 						<p class="fragment highlight-blue">Image</p>
-						<p class="fragment highlight-blue">Registry</p>
+						<p class="fragment highlight-blue">Registry</p> <br>
+						<p>
+							<small>(Click the down arrow for terminology explanations.)</small>
+						</p>
 					</section>
 
 					<section>
